--- a/Python_Programming_And_Numerical_Methods_A_Guide_For_Engineers_And_Scientists.ipynb
+++ b/Python_Programming_And_Numerical_Methods_A_Guide_For_Engineers_And_Scientists.ipynb
@@ -3428,7 +3428,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NNs4vagBgD35",
-        "outputId": "b110e39a-b098-409d-df05-a48b84243e3d"
+        "outputId": "a37ff280-5210-4498-ba53-0402ff481299"
       },
       "source": [
         "my_sinh(1)"
@@ -3445,7 +3445,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 93
+          "execution_count": 3
         }
       ]
     },
@@ -3502,7 +3502,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NPBzvfuKl1yx",
-        "outputId": "f071875d-667b-4ee9-e2b0-c5844964ff6f"
+        "outputId": "932c0800-8f5a-4baa-fb0d-8f7229ed643d"
       },
       "source": [
         "my_checker_board(5)"
@@ -3523,7 +3523,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 95
+          "execution_count": 5
         }
       ]
     },
@@ -3565,7 +3565,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NkKirlUDuHd-",
-        "outputId": "8068af3a-f0ff-45e1-a2b4-a2b42b162d70"
+        "outputId": "e0d90bc1-4fc2-45e1-e370-35cba377bfb1"
       },
       "source": [
         "my_triangle(1,2)"
@@ -3582,7 +3582,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 97
+          "execution_count": 7
         }
       ]
     },
@@ -3611,7 +3611,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1bV_C3xyuNKn",
-        "outputId": "99df702a-6240-4c1e-ef96-20faa77bb7ea"
+        "outputId": "0df466c7-f97a-4720-a232-dc830cbd9a35"
       },
       "source": [
         "%clear(b, c, m1, m2)\n",
@@ -3647,7 +3647,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "waVomXAmPd-k",
-        "outputId": "7db4d66d-d7f9-4db5-b010-4b480b015920"
+        "outputId": "4f1e7227-ef3c-4fbe-cea6-dc5390ad96a3"
       },
       "source": [
         "m = np.array([[1, 2], [4, 5], [7, 8]])\n",
@@ -3667,7 +3667,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 9
         }
       ]
     },
@@ -3678,7 +3678,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1VsobROqPkI9",
-        "outputId": "d11c7b7a-58e8-43c8-ae8a-e136c5e3ebfa"
+        "outputId": "e2b38f18-9b0c-4495-b396-ce86dd4dfac2"
       },
       "source": [
         "m1, m2 = my_split_matrix(m)\n",
@@ -3698,7 +3698,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 10
         }
       ]
     },
@@ -3709,7 +3709,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8bFSCo9IPo3t",
-        "outputId": "323460e8-0aa9-4672-ac55-7a1a35d13ca8"
+        "outputId": "e9ef5847-8dd7-430c-bd1c-271869b2c9bf"
       },
       "source": [
         "m2"
@@ -3728,7 +3728,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 11
         }
       ]
     },
@@ -3761,7 +3761,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N-gNP3_BTLmZ",
-        "outputId": "388f4fcd-fd86-4f97-c240-670effc22ad8"
+        "outputId": "6fb8377f-52ca-4815-ae7b-dc5bad942d0c"
       },
       "source": [
         "m3"
@@ -3780,7 +3780,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 14
         }
       ]
     },
@@ -3791,7 +3791,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "udiDw0bFTNU4",
-        "outputId": "adad9d27-61d1-421e-e68e-45401148e29c"
+        "outputId": "b2799a53-c2e3-42e4-9f06-9d31acfd4e76"
       },
       "source": [
         "m4"
@@ -3810,7 +3810,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 15
         }
       ]
     },
@@ -3864,7 +3864,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hxb1LVpZVNwJ",
-        "outputId": "c11a4499-1a70-4ca7-de1e-147928258260"
+        "outputId": "76ea97d4-33f5-472a-8bda-962f19cd856c"
       },
       "source": [
         "area"
@@ -3881,7 +3881,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 108
+          "execution_count": 18
         }
       ]
     },
@@ -3892,7 +3892,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kDs5Eo1QVdl-",
-        "outputId": "6ada2a6c-dd59-47f0-d501-3da59063ba99"
+        "outputId": "a1f554bd-2af5-4e4b-fc02-05cef9e02625"
       },
       "source": [
         "volume"
@@ -3909,7 +3909,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 109
+          "execution_count": 19
         }
       ]
     },
@@ -3958,7 +3958,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E1kw3KgKVgLm",
-        "outputId": "4772deeb-b057-456d-ce0a-3ecb7c929226"
+        "outputId": "68f65cb8-3acd-4808-eeba-988c085319d8"
       },
       "source": [
         "my_n_odds(np.arange(100))"
@@ -3975,7 +3975,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 21
         }
       ]
     },
@@ -4004,7 +4004,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Qh3ld0VDXrUR",
-        "outputId": "bed65819-547f-47cd-ffde-efa464b6fc11"
+        "outputId": "751b6b46-ddff-4ceb-b036-78a894073ed4"
       },
       "source": [
         "clear(a)"
@@ -4041,7 +4041,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BWFtDIa3XjoT",
-        "outputId": "654e200f-dffc-45c4-a70c-7489eaa28eef"
+        "outputId": "860ff417-60b0-46f0-81f2-18b35629a63e"
       },
       "source": [
         "my_twos(3,4)"
@@ -4060,7 +4060,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 114
+          "execution_count": 24
         }
       ]
     },
@@ -4100,7 +4100,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hVacGoV-jhJy",
-        "outputId": "ab35ed99-350b-4c06-bc66-47abde471bac"
+        "outputId": "52410b1d-a9fb-4c59-9647-e88d5983fa60"
       },
       "source": [
         "restanding(4, 2)"
@@ -4117,7 +4117,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 116
+          "execution_count": 26
         }
       ]
     },
@@ -4158,7 +4158,7 @@
           "height": 35
         },
         "id": "fpbryKRpmGzE",
-        "outputId": "ede81935-d4cf-4c24-e668-8c5c0b53842a"
+        "outputId": "e2cc31ba-f8f5-41cc-dd6b-705ebd9b853a"
       },
       "source": [
         "s1 = 'I love'\n",
@@ -4180,7 +4180,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 119
+          "execution_count": 28
         }
       ]
     },
@@ -4219,7 +4219,7 @@
           "height": 163
         },
         "id": "YPA1AavvmP6N",
-        "outputId": "0a8ebae1-db31-4415-dd30-a015e8366584"
+        "outputId": "c14b3aaa-cc3e-431e-a2fa-ed8b25d01657"
       },
       "source": [
         "add_string(s1, )"
@@ -4233,7 +4233,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-120-fb8aa90649e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0madd_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-29-fb8aa90649e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0madd_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m: <lambda>() missing 1 required positional argument: 's2'"
           ]
         }
@@ -4242,12 +4242,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 129
-        },
-        "id": "rvjzgQTCmi35",
-        "outputId": "95d3ea81-49d9-45f5-cc8b-cca3bcbfb0e1"
+        "id": "rvjzgQTCmi35"
       },
       "source": [
         "i = 0;\n",
@@ -4255,16 +4250,7 @@
         "xyz = 231"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-122-05ce2245151b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    xyz = 231\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4307,25 +4293,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MINzKB1Zq6qE",
-        "outputId": "b464d2ea-c8a8-4be1-827d-6a3eecec5b7c"
+        "id": "MINzKB1Zq6qE"
       },
       "source": [
         "greeting('Nicolás', 21)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Hy, my name is Nicolás and I am 21 years old.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4374,30 +4348,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9NczMXvRtPK-",
-        "outputId": "a332ad72-481c-49be-f662-2b0d00a30946"
+        "id": "9NczMXvRtPK-"
       },
       "source": [
         "my_donut_area(np.arange(1, 4), np.arange(2, 7, 2))"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([3.14159265, 6.28318531, 9.42477796])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 58
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4424,30 +4381,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "G-2gYF5ntlZr",
-        "outputId": "d51dcc30-0f6e-40fa-ca0d-01c87f9826d6"
+        "id": "G-2gYF5ntlZr"
       },
       "source": [
         "your_donut_area(2,4)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "37.69911184307752"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 133
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4494,58 +4434,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PFDtRcTix5_2",
-        "outputId": "a0298413-1391-4d85-f5a9-ad8e9836ddb6"
+        "id": "PFDtRcTix5_2"
       },
       "source": [
         "my_within_tolerance([0, 1, 2, 3], 1.5, 0.75)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(array([1, 2]),)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 94
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Q9_QYUJYyBDK",
-        "outputId": "4e69c237-08ec-4752-974a-6e5bc934e67f"
+        "id": "Q9_QYUJYyBDK"
       },
       "source": [
         "my_within_tolerance(np.arange(0, 1.01, 0.01), 0.5, 0.03)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(array([47, 48, 49, 50, 51, 52]),)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 99
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4596,25 +4502,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xQXdieAd3E2q",
-        "outputId": "dab3c926-d4e2-4eaa-ebdd-b6b33c2d54e9"
+        "id": "xQXdieAd3E2q"
       },
       "source": [
         "bounding_array(np.arange(-5, 6, 1), 3, -3)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[-3 -3 -3 -2 -1  0  1  2  3  3  3]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8312,7 +8206,7 @@
         "    print(\"Move disk %d from tower %d to tower %d.\"\\\n",
         "                    %(N, from_tower, to_tower))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8327,7 +8221,7 @@
       "source": [
         "My_towers(3, 1, 3, 2)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8399,7 +8293,7 @@
         "import math as m\n",
         "from sympy.abc import x, v, u, c, b, a"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8419,7 +8313,7 @@
         "    lista.remove(min(lista)) #... y remuevo dicho valor de la lista copiada... E inicia un nuevo bucle.\n",
         "  return x #Me devuelve la lista ordenada."
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8434,7 +8328,7 @@
       "source": [
         "my_quicksort([5, 4, 6, 2, 9, 1, 7, 3])"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8457,6 +8351,91 @@
       },
       "source": [
         "# Chapter 7: Object Oriented Programming (OOP)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "00IGz5kxnysU"
+      },
+      "source": [
+        "## Problem 1"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vKFtGlY1vjHY"
+      },
+      "source": [
+        "* Describe what are the differences of classes versus objects"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dE2PXo9Nvtaa"
+      },
+      "source": [
+        "Para empezar, uno define una _class_ con ciertas funciones internas definidas. Esta _class_ (que inicialmente voy a suponer que es única y no depende de otra), va a tomar ciertos datos de entrada (al igual que vimos al definir funciones), y puede realizar, valga la redundancia, ciertas funciones que nosotros definimos dentro de la misma. Luego, con esta _class_ ya definida, uno la pone en uso. Para eso, define un _object_, que responde a esa clase, y que tiene ciertos datos de entrada. Y podemos pedir datos de ese _object_ usando las funciones que están definidas dentro de la _class_. Lo que tiene de ventajoso esto, desde mi punto de vista, es que se pueden ingresar varios _objects_, independientes entre sí, utilizando el código ya cargado de la _class_. En otras palabras, es más genérico y no tan específico."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JVJRSbq2yN0u"
+      },
+      "source": [
+        "## Problem 2"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b2KscwkqyQWA"
+      },
+      "source": [
+        "* Describe why we use self as the first argument in the methods."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2ybQCCll0a5O"
+      },
+      "source": [
+        "Por ponerlo en palabras coloquiales y sencillas, al usar el argumento extra _self_, los _methods_ (funciones definidas dentro de la _class_ según entiendo) pueden acceder a otros datos y otros _methods_-funciones dentro del mismo objeto. Entiendo que es una manera de llamarse a si mismo para utilizar sus propios datos ingresados al definir un _method_ dentro de la _class_. Después, en los _objects_, ya no se utiliza."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HGn1llbM1ie5"
+      },
+      "source": [
+        "## Problem 3"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eTm7vSEP1x5g"
+      },
+      "source": [
+        "* What is a constructor? And why do we use it?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hn15z-yAD8eR"
+      },
+      "source": [
+        "Tomando como bibliografía a https://www.geeksforgeeks.org/constructors-in-python/, porque el cráneo que formuló la pregunta no vio que en el libro no aparece ni una sola vez la palabra _constructor_, podemos decir que: el constructor, que es _init_ en nuestro caso, es uno de los _special methods_ que se usa al definir una _class_ para que un _object_ tenga definidos los valores que le carguemos apenas lo inicialicemos (o sea, cuando tecleemos Shift+Enter).\n",
+        "\n",
+        "Por ponerlo en criollo, yo interpreto que: uno define una _class_, dentro de ella el primer _method_ que definimos es el _init_. \n",
+        "\n",
+        "Planteo un ejemplo porque se me complica: Defino una class __class__ Fulano():. Para definir el init ponemos, hmm... e.g def_init_(self, algo1, algo2, algo3) y abajo, bien indentado, self.algo1 = algo1, self.algo2 = algo2 y self.algo3 = algo3. Entonces, si yo inicio un objeto dentro de la __class__ , e.g Nico = Fulano(lindo, precioso, divino), el method_init_ va a ser el primero en correr y va a asignar los ítems así: self.algo1 = lindo, self.algo2 = precioso y self.algo3 = divino. Y después va a estar listo para realizar el method que le pidamos con estos datos definidos internamente (para esto lo usamos al constructor, así si). Creo que es por eso que a dichos datos le dicen atributos (_attributes_) del objeto."
       ]
     },
     {
