--- a/Python_Programming_And_Numerical_Methods_A_Guide_For_Engineers_And_Scientists.ipynb
+++ b/Python_Programming_And_Numerical_Methods_A_Guide_For_Engineers_And_Scientists.ipynb
@@ -8435,7 +8435,34 @@
         "\n",
         "Por ponerlo en criollo, yo interpreto que: uno define una _class_, dentro de ella el primer _method_ que definimos es el _init_. \n",
         "\n",
-        "Planteo un ejemplo porque se me complica: Defino una class __class__ Fulano():. Para definir el init ponemos, hmm... e.g def_init_(self, algo1, algo2, algo3) y abajo, bien indentado, self.algo1 = algo1, self.algo2 = algo2 y self.algo3 = algo3. Entonces, si yo inicio un objeto dentro de la __class__ , e.g Nico = Fulano(lindo, precioso, divino), el method_init_ va a ser el primero en correr y va a asignar los ítems así: self.algo1 = lindo, self.algo2 = precioso y self.algo3 = divino. Y después va a estar listo para realizar el method que le pidamos con estos datos definidos internamente (para esto lo usamos al constructor, así si). Creo que es por eso que a dichos datos le dicen atributos (_attributes_) del objeto."
+        "Planteo un ejemplo porque se me complica: Defino una class `class Fulano():`. Para definir el init ponemos, hmm... e.g `def __init__ (self, algo1, algo2, algo3)` y abajo, bien indentado, `self.algo1 = algo1`, `self.algo2 = algo2` y `self.algo3 = algo3`. Entonces, si yo inicio un objeto dentro de la __class__ , e.g `Nico = Fulano(lindo, precioso, divino)`, el method_init_ va a ser el primero en correr y va a asignar los ítems así: `self.algo1 = lindo`, `self.algo2 = precioso` y `self.algo3 = divino`. Y después va a estar listo para realizar el method que le pidamos con estos datos definidos internamente (para esto lo usamos al constructor, así si). Creo que es por eso que a dichos datos le dicen atributos (_attributes_) del objeto."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qV_Fx48ojmRj"
+      },
+      "source": [
+        "## Problem 4"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C7Om7UV1jz4C"
+      },
+      "source": [
+        "* Describe the differences between class and instance attributes."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "K7X_S1kTnM44"
+      },
+      "source": [
+        "Todos los datos (_attributes_) que mencioné hasta el momento son _instance attributes_, porque para asignarles valores o utilizarlos tenía que llamarlos según self. y el nombre del _attribute_ como por ejemplo self.data. Estos _attributes_ se inicializaban dentro de `_init_` o de algún _method_. "
       ]
     },
     {
